cookie가 없는 경우에 대한 코드 수정